# ymir

./: .gitignore  .style.yapf  BUILD  BUILD.bazel  README.md  WORKSPACE  WORKSPACE.bazel  freerider.py  grid_search.py  main.py  makefile  plot.py  pre-commit-hook.sh  requirements.txt  setup.py  test.py
.github/workflows/: cdocs.yml  ct.yml  main.yml
chief/: __init__.py
chief/aggregation/: __init__.py  fed_avg.py  foolsgold.py  krum.py  std_dagmm.py  viceroy.py
chief/compression/: fedzip.py
data/: README.md  cifar10.py  dlall.sh  kddcup99.py  mnist.py
datalib/: README.md  __init__.py  cifar10.py  kddcup99.py  mnist.py
docs/: datalib.html  index.html  search.js  ymir.html  ymirlib.html
docs/datalib/: cifar10.html  kddcup99.html  mnist.html
docs/ymir/: attacks.html  client.html  fritz.html  garrison.html  lib.html  mp.html  path.html  regiment.html  scout.html  server.html  utils.html
endpoints/: __init__.py  adversaries.py  datasets.py
endpoints/compression/: __init__.py  fedzip.py
research/flguard/: BUILD  README.md  main.py
research/reiny/: BUILD  README.md  compression.py  main.py  tutelage.py  utils.py
research/viceroy/: BUILD  datasets.py  experiments.sh  freerider.py  grid_search.py  labelflip.py  main.py  mouther.py  plot.py
samples/: BUILD  README.md  backdoor.py  fedavg.py  fedmax.py  fedprox.py  learning_methods.ipynb  parameter_poisoning.py  performing_attacks.ipynb  requirements.txt  using_the_library.ipynb
samples/attacks/: README.md  backdoor.py  freerider.py  parameter_poisoning.py
tests/: BUILD  README.md  requirements.txt  test_aggregators.py  test_attacks.py  test_client.py  test_collaborator.py  test_coordinate.py  test_datasets.py  test_distributions.py  test_fritz.py  test_garrison.py  test_losses.py  test_metrics.py  test_models.py  test_mp.py  test_network.py  test_path.py  test_regiment.py  test_scout.py  test_server.py  test_utils.py  test_ymirlib.py
tfymir/: __init__.py
tfymir/fritz/: alternating_minimization.py  freerider.py  mouther.py  onoff.py  scaler.py
tfymir/garrison/: average.py  captain.py  contra.py  fedavg.py  foolsgold.py  krum.py  std_dagmm.py  viceroy.py
tfymir/mp/: __init__.py  datasets.py  losses.py  metrics.py  network.py
tfymir/path/: __init__.py  weights.py
tfymir/regiment/: ditto.py  scout.py
utils/: __init__.py  datasets.py  losses.py  metrics.py  nets.py
ymir/: README.md  __init__.py
ymir/attacks/: alternating_minimization.py  constrain_scale.py  freerider.py
ymir/client/: client.py
ymir/fritz/: __init__.py  alternating_minimization.py  backdoor.py  constrain_and_scale.py  freerider.py  labelflipper.py  mouther.py  onoff.py  scaler.py  smp.py
ymir/garrison/: README.md  __init__.py  average.py  captain.py  contra.py  fedavg.py  flame.py  flguard.py  foolsgold.py  krum.py  median.py  norm_clipping.py  phocas.py  std_dagmm.py  trmean.py  viceroy.py
ymir/mp/: README.md  __init__.py  datasets.py  distributions.py  losses.py  metrics.py  models.py  nets.py  network.py  optimizers.py
ymir/path/: __init__.py  functions.py  tree.py  weights.py
ymir/regiment/: README.md  __init__.py  ditto.py  fedmax.py  fedprox.py  local.py  scout.py
ymir/scout/: README.md  __init__.py  adversaries.py  collaborator.py
ymir/server/: contra.py  fedavg.py  (+4 more)
ymirlib/: README.md  __init__.py  setup.py
(+132 files in other folders)
