load("@ymir_deps//:requirements.bzl", "requirement")

py_library(
    name = 'ymirlib',
    srcs = glob(["ymirlib/**/*.py"]),
    deps = [],
)

py_library(
    name = 'datalib',
    srcs = glob(["datalib/**/*.py"]),
    deps = [
        requirement('scikit-learn'),
        requirement('absl-py'),
    ],
)

py_test(
    name = "tests/ymirlib",
    srcs = ['tests/test_ymirlib.py'],
    deps = [
        'ymirlib',
        requirement('chex'),
        requirement('absl-py'),
    ],
    main = "test_ymirlib.py"
)

py_library(
    name = 'ymir',
    srcs = glob(["ymir/**/*.py"]),
    deps = [
        'ymirlib',
        'datalib',
        requirement('dm-haiku'),
        requirement('optax'),
        requirement('absl-py')
    ],
)

py_binary(
  name = "samples/fedavg",
  deps = ['ymir'],
  srcs = ["samples/fedavg.py"],
  main = "fedavg.py",
)

py_binary(
  name = "samples/fedmax",
  deps = ['ymir'],
  srcs = ["samples/fedmax.py"],
  main = "fedmax.py",
)

py_binary(
  name = "samples/fedprox",
  deps = ['ymir'],
  srcs = ["samples/fedprox.py"],
  main = "fedprox.py",
)

py_binary(
    name = "viceroy/labelflip",
    deps = ['ymir'],
    srcs = ["research/viceroy/labelflip.py", "research/viceroy/metrics.py"],
    main = "labelflip.py",
)

py_binary(
    name = "viceroy/freerider",
    deps = ['ymir'],
    srcs = ["research/viceroy/freerider.py", "research/viceroy/metrics.py"],
    main = "freerider.py",
)

py_binary(
    name = "viceroy/grid_search",
    deps = ['ymir'],
    srcs = ["research/viceroy/grid_search.py", "research/viceroy/metrics.py"],
    main = "grid_search.py",
)

py_binary(
    name = "viceroy/mouther",
    deps = ['ymir'],
    srcs = ["research/viceroy/mouther.py", "research/viceroy/metrics.py"],
    main = "mouther.py",
)

py_binary(
    name = "reiny/compression",
    deps = ['ymir'],
    srcs = ["research/reiny/compression.py", "research/reiny/utils.py"],
    main = "compression.py",
)

py_binary(
    name = "reiny/tutelage",
    deps = ['ymir'],
    srcs = ["research/reiny/tutelage.py", "research/reiny/utils.py"],
    main = "tutelage.py",
)